# WukongITM

./: .gitignore  LICENSE  README.md  SETUP.md  TEST_PLAN.md  package-lock.json  package.json
src/: app.jsx  demo-content.js  icons.jsx  index.html  styles.css  tabs-placeholder.jsx  tauri-bridge.js  workbench-doc.jsx  workbench-side.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/certs/: mod.rs
src-tauri/src/exporters/: mod.rs
src-tauri/src/parsers/: mod.rs
src-tauri/src/proxy/: mod.rs
src-tauri/src/storage/: mappings.rs
src-tauri/src/sysproxy/: mod.rs
